<!--
  ~ Copyright (c) 2019 Exotel Techcom Pvt Ltd
  ~ All rights reserved
   -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/exotel_logo"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@drawable/exotel_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/infoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="Welcome to\nExotel Voice App Demo!!"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/userIdTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/enter_user_id"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:padding="5dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_weight="2"
                    android:background="@drawable/edit_text_border"
                    android:text=""
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/passwordTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="-11dp"
                android:text="@string/enter_password"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordLayout"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="60dp"
                    android:layout_weight="2"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword|textMultiLine"
                        android:lines="1"
                        android:padding="5dp"
                        android:background="@drawable/edit_text_border"
                        android:text="exotel5002"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/toggleAdvancedSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="18dp"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:text="@string/advanced_settings"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp" />

            <LinearLayout
                android:id="@+id/advancedSettingsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/displayNameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/enter_display_name"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <EditText
                        android:id="@+id/displayName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_weight="2"
                        android:background="@drawable/edit_text_border"
                        android:text=""
                        android:padding="5dp"
                        android:textSize="20sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/selectDomain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/account_sid_prompt"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <EditText
                        android:id="@+id/account_sid"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_weight="2"
                        android:padding="5dp"
                        android:background="@drawable/edit_text_border"
                        android:text="@string/sid_prod"
                        android:textSize="20sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/selectSetup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/enter_hostname"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <EditText
                        android:id="@+id/hostname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_weight="2"
                        android:background="@drawable/edit_text_border"
                        android:inputType="textMultiLine"
                        android:lines="2"
                        android:padding="5dp"
                        android:text="@string/hostname_prod"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/b_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/action_sign_in" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toRightOf="@+id/b_login"
                    android:visibility="visible" />
            </RelativeLayout>

            <Button
                android:id="@+id/b_report_problem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/upload_logs"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>